<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/top_square"
        android:gravity="center"
        android:text="@string/textTop"
        android:textColor="@color/colorOnPrimary"
        android:textSize="22sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editTextName"
            style="@style/EditText"
            android:hint="@string/editTextName"
            android:autofillHints="name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextFollowing"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/editTextFollowing"
            style="@style/EditText"
            android:hint="@string/editTextFollowing"
            android:autofillHints="following"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toTopOf="@+id/editTextFollowers"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextFollowers"
            style="@style/EditText"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextFollowers"
            android:autofillHints="followers"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/editTextFollowing" />

        <Button
            android:id="@+id/button"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button"
            android:textColor="@color/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

